# Algorithmic_trading

./: README.md
src/: CMakeLists.txt  Makefile  dvi.md  main.cpp  theory.md
src/controller/: controller.cc  controller.h
src/libs/qcustomplot/: qcustomplot.cc  qcustomplot.h
src/model/cubic_spline/: cubic_spline.cc  cubic_spline.h
src/model/facade/: facade.cc  facade.h
src/model/file_reader/: error_load_type.h  file_reader.cc  file_reader.h
src/model/math_algorithms/: gauss.cc  gauss.h
src/model/matrix/: matrix.cc  matrix.h
src/model/polynomial_approximation/: polynomial_approximation.cc  polynomial_approximation.h
src/view/: error_handler.cc  error_handler.h
src/view/graph_widget/: graph_widget.cc  graph_widget.h
src/view/main_window/: mainwindow.cc  mainwindow.h  mainwindow.ui
src/view/second_window/: second_window.cc  second_window.h  second_window.ui
